Exercise filter and parameterized filter test; fixed WorkoutControllerTest